# Deepwater

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  GETTING_STARTED.md  LICENSE  PRODUCTION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  benchmark_latency.py  build.sh  main.py  network.md  network.plan  network_stack_review.md  network_v1_plan.md  pyproject.toml  reader_boundary_review.md  requirements.txt  runtime_invariants.md  setup.py  test.sh  test_documentation.py  test_non_blocking.py
_ideas/: _archive.md  _backlog.md  _milestones.md
cli/: test_writer.py
core/: chunk.py  feed_registry.py  global_registry.py  index.py  layout_json.py  legacy_dump.py  platform.py  registry.py  writer.py
data/coinbase-test/: manifest.json
data/coinbase-test/data/CB-L2-XRP-USD/: chunk_00000001.idx  config.json  record_format.json
data/coinbase-test/data/CB-TRADES-XRP-USD/: config.json  record_format.json
deepwater/: __init__.py  __main__.py  blob.py
deepwater/cli/: bootstrap.py  datasets_cli.py  feed_cli.py  feeds_cli.py  segments_cli.py  timefmt.py
deepwater/io/: __init__.py  blob_sidecar.py  chunk.py  formatting.py  persistent_ring.py  reader.py  ring.py  ring_shadow.pyx  timestamps.py  traversal.py  traversal.pyx  writer.py
deepwater/io/reader/: reader.py
deepwater/io/writer/: __init__.py  persistent_ring.py  writer.py
deepwater/metadata/: admin.py  catalog.py  discovery.py  feed_metadata.py  feed_registry.py  feed_schema.py  global_registry.py  segments.py  sidecar.py
deepwater/network/: __init__.py  agent.py  client.py  path.py  protocol.py
deepwater/ops/: cleanup.py  health_check.py  repair.py
deepwater/utils/: timestamps.py  timestamps.pyx
docs/: reader_story.md  writer_story.md
examples/: network_remote_read.py
examples/coinbase/: headless_reader.py  headless_repair.py  headless_websocket.py  main_websocket.py  orderbook.py  orderbook_snapshot.py  trades.py  websocket_client.py
feeds/: order_book.py  websocket_client.py
scripts/: bench_ipc_latency.py  bench_reader.py  bench_writer.py
src/deepwater/: __init__.py  __main__.py  bootstrap.py  chunk.py  cleanup.py  datasets.py  datasets_cli.py  feed_cli.py  feed_registry.py  global_registry.py  health_check.py  index.py  layout_json.py  manifest.py  platform.py  reader.py  repair.py  ring.py  segments.py  segments_cli.py  writer.py
src/deepwater/cli/: bootstrap.py  datasets_cli.py  feed_cli.py  feeds_cli.py  segments_cli.py  timefmt.py
src/deepwater/io/: __init__.py  chunk.py  formatting.py  index.py  persistent_ring.py  range_scan.py  reader.py  reader_fast.pyx  ring.py  streaming.py  writer.py
src/deepwater/metadata/: feed_registry.py  global_registry.py  layout_json.py  manifest.py  segments.py
src/deepwater/network/: __init__.py  agent.py  client.py  path.py  protocol.py
src/deepwater/ops/: cleanup.py  health_check.py  repair.py
src/deepwater/utils/: benchmarking.py  process.py  timestamps.py
src/tests/: headless_reader.py  headless_repair.py  headless_websocket.py  orderbook.py  orderbook_snapshot.py  trades.py  websocket_client.py
tests/: README.md  README.md.bak  __init__.py  conftest.py  helpers.py  main.py  main_websocket.py  orderbook.py  test_blob_reference.py  test_blob_sidecar_api.py  test_bootstrap_cli.py  test_catalog.py  test_core.py  test_datasets.py  test_delete_feed.py  test_feed_cli.py  test_feed_registry.py  test_feed_schema.py  test_feeds_cli.py  test_global_registry.py  test_health_cleanup.py  test_helper_reuse.py  test_layout.py  test_metadata_bounds.py  test_multikey.py  test_network.py  test_non_blocking.py  test_persistent_raw.py  test_playback_index.py  test_range_many_chunks.py  test_range_rotation.py  test_range_scan.py  test_reader_cleanup.py  test_reader_formats.py  test_reader_range.py  test_ring_buffer.py  test_segments.py  test_timestamps.py  test_writer_direct.py  test_ws_disconnect_segments.py  (+1 more)
utils/: benchmarking.py  timestamps.py
