[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepwater"
version = "0.0.1"
description = "Shared-memory feed storage for fixed-width time-series records and blob sidecars"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Dan Gove", email = "dnlgove2@gmail.com" }]

dependencies = ["numpy>=1.26", "msgspec>=0.18.6", "orjson>=3.11.3", "python-crontab>=3.3.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=7.0"]

[project.scripts]
deepwater = "deepwater.cli.bootstrap:main"
deepwater-agent = "deepwater.network.agent:main"
deepwater-cleanup = "deepwater.ops.cleanup:main"
deepwater-health = "deepwater.ops.health_check:main"
deepwater-repair = "deepwater.ops.repair:main"
deepwater-create-feed = "deepwater.cli.feed_cli:create_main"
deepwater-delete-feed = "deepwater.cli.feed_cli:delete_main"
deepwater-feeds = "deepwater.cli.feeds_cli:main"
deepwater-segments = "deepwater.cli.segments_cli:main"
deepwater-datasets = "deepwater.cli.datasets_cli:main"

[project.urls]
Homepage = "https://github.com/DanielGove/Deepwater"
Repository = "https://github.com/DanielGove/Deepwater"
Issues = "https://github.com/DanielGove/Deepwater/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepwater", "deepwater.*"]

[tool.setuptools.package-data]
"deepwater.io" = ["*.pyx"]
"deepwater.utils" = ["*.pyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "integration: tests that launch subprocesses or loopback network agents",
    "perf: performance and latency probes",
]
